XWIKI-10887: "Retrieve username" and "Reset password" buttons are not aligned with the "Username" and "Email" fields
- Restricting the selector, since the vertical-alignment produces layout alignment problems on FF for checkboxes

(cherry picked from commit 85742a08a7cc3552810cea96994be9b24321eaff)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
@@ -102,7 +102,7 @@ select[size="0"], select[size="1"] {
     text-transform: uppercase;
     margin-right: 0.5em;
   }
-  input {
+  input[type="text"] {
     vertical-align: middle;
   }
 }
