--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/stylesheets.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/stylesheets.vm
@@ -5,16 +5,16 @@
   #set ($defaultstyle = "style.css")
 #end
 #set ($urlParametersMap = {})
+## Specifying the skin to avoid some problems if the base skin is not the same as the current skin
+## (see: http://jira.xwiki.org/browse/XWIKI-11190)
+#set ($discard = $urlParametersMap.put("skin", "$!xcontext.skin"))
 #if ($themeDoc)
   #set ($discard = $urlParametersMap.put("colorTheme", "$!themeDocFullName"))
 #end
-#if ($request.skin)
-  #set ($discard = $urlParametersMap.put("skin", "$!request.skin"))
-#end
 #set ($urlParameters = $escapetool.url($urlParametersMap))
 #set ($defaultStyleURL = $xwiki.getSkinFile($defaultstyle, true))
-<link href="${defaultStyleURL}#if (!$urlParametersMap.isEmpty())?${urlParameters}#end" rel="stylesheet" type="text/css" media="all" />
-<link href="$xwiki.getSkinFile('print.css', true)#if (!$urlParametersMap.isEmpty())?${urlParameters}#end" rel="stylesheet" type="text/css" media="#if ($printss)all#{else}print#{end}" />
+<link href="${defaultStyleURL}?${urlParameters}" rel="stylesheet" type="text/css" media="all" />
+<link href="$xwiki.getSkinFile('print.css', true)?${urlParameters}" rel="stylesheet" type="text/css" media="#if ($printss)all#{else}print#{end}" />
 #set ($a11y = "$!{request.getCookie('a11y').getValue()}")
 #if ($a11y == '')
   #set ($a11y = "$!{xwiki.getUserPreference('accessibility')}")
@@ -28,7 +28,7 @@
 #if ($stylesheets != '')
   #foreach ($stylesheet in $stylesheets.split(','))
     #if (!$stylesheet.equalsIgnoreCase($defaultstyle))
-      <link href="$xwiki.getSkinFile($stylesheet, true)" rel="alternate stylesheet" type="text/css" title="Alternate StyleSheet ${velocityCount}" />
+      <link href="$xwiki.getSkinFile($stylesheet, true)?${urlParameters}" rel="alternate stylesheet" type="text/css" title="Alternate StyleSheet ${velocityCount}" />
     #end
   #end
 #end
