XWIKI-11166: Add a 'Go to [entity]' entry in the navbar, while expanding the menu selection to the whole width.
* Revert the bad modifications.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_home.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_home.vm
@@ -7,7 +7,7 @@
 #set($homeURL = $xwiki.getURL($mainWikiHomeDocumentReference))
 #set ($displayHomeMenu = $isWikiUIAvailable && ($xcontext.isMainWiki() || ("$!services.wiki.user" != '' && $services.wiki.user.getUserScope()=='GLOBAL_ONLY')))
 #if ($displayHomeMenu)
-  #xwikitopmenuentrystart($homeURL $services.localization.render('core.menu.type.home') 'tmMainWiki' 'hasIcon' 'home')
+  #xwikitopmenuentrystart($homeURL $services.localization.render('core.menu.type.home') 'tmMainWiki' '' 'home')
     ## GO TO
     #submenuitem($homeURL $services.localization.render('core.menu.goto.wiki') '', '', 'arrow-right')
     ## WATCH / UNWATCH WIKI -- TODO EXTENSION POINT
