--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_macros.vm
@@ -86,9 +86,8 @@
     #set($linkTitle = "${linkWords.get(0)}: ${linkWords.get(1)}")
   #end
   <li class="dropdown text-left" #if(!$stringtool.isBlank($id))id="$id"#end>
-      <a href="$actionurl" class="$!class" title="$linkTitle">#glyphicon($icon) $!iconImg $linkName</a>
-      <a href="$actionurl" class="hasCaret dropdown-toggle" data-toggle="dropdown"><b class="caret"></b></a>
-      <ul class="dropdown-menu">
+    <a href="$actionurl" #if($id)id="$id"#end class="dropdown-toggle $!class" data-toggle="dropdown" title="$linkTitle">#glyphicon($icon) $!iconImg $linkName <b class="caret"></b></a>
+    <ul class="dropdown-menu">
 #end
 
 ###
