XWIKI-11166: Add a 'Go to [entity]' entry in the navbar, while expanding the menu selection to the whole width.
* Minor fix.

(cherry picked from commit 7cd6f04c607199d160b5873956bf192b0f3ec4b7)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_page.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_page.vm
@@ -6,7 +6,7 @@
 #set ($canDelete = !$doc.isNew() && $xwiki.hasAccessLevel('delete'))
 #set ($canWatch = !$doc.isNew() && $hasWatch)
 #set ($displayPageSubmenu = $canWatch || $canCopy || $canDelete)
-#set ($pageURL = $xwiki.getURL($doc.documentReference, 'view')))
+#set ($pageURL = $xwiki.getURL($doc.documentReference, 'view'))
 #xwikitopmenuseparator()
 #if (!$displayPageSubmenu)
   #xwikitopmenuentry($pageURL "$services.localization.render('core.menu.type.page')__SEPARATOR__$!{escapetool.xml($doc.name)}" 'tmPage' '' 'file')
