XWIKI-11167: Change the location of 'Add' menu putting it back to the global menu.
(cherry picked from commit febdd7942d5134d17858d8986af3ad66084b5552)

Conflicts:
	xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/buttons.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/buttons.less
@@ -139,3 +139,10 @@ input.button, .buttonwrapper button, .buttonwrapper a {
     .btn-border(@btn-default-bg);
   }
 }
+
+// Buttons on the navbar ==================================================
+.navbar-nav {
+  .btn-group {
+    margin: 0;
+  }
+}
