--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/forms.less
@@ -115,3 +115,10 @@ select[size="0"], select[size="1"] {
 .LV_validation_message {
   display: block;
 }
+
+// Forms on the navbar ==================================================
+@media screen and (max-width: @screen-xs-max) {
+  .navbar-form {
+    margin: 0 0;
+  }
+}
