--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_view.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_view.vm
@@ -9,6 +9,7 @@
     
     ## Right menu
     #xwikitopmenurightstart()
+      #template("quicksearch.vm")
       #template("menus_language.vm")
       #template("menus_user.vm")
     #xwikitopmenurightend()
@@ -19,8 +20,10 @@
       #template("menus_wiki.vm")
       #template("menus_space.vm")
       #template("menus_page.vm")
+      #if($displayCreateMenu)
+        #template("menus_create.vm")
+      #end
     #xwikitopmenuleftend()
-    #template("quicksearch.vm")
     
   ## End of Top Menu
   #xwikitopmenuend()
