[Misc] Better consistency between menus code in Flamingo.
(cherry picked from commit ab7ed3d2350975f9e730ece513f351a2f5c09779)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_create.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_create.vm
@@ -1,6 +1,7 @@
 ##################################
 ##         CREATE MENU
 ##################################
+#if($displayCreateMenu)
 ## $displayCreateWiki is determined by:
 ## - the wiki app is installed
 ## - and the user has the right to create a wiki
@@ -31,4 +32,5 @@
   #end
   #xwikibuttonentryend()
   </div>
+#end
 #end
