XWIKI-10895: Options are overlapping with date and time of comments on mobile

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/comments.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/comments.css
@@ -203,3 +203,13 @@ form.edit-xcomment .commentcontent textarea {
   /* fix for IE7 */
   width: 98%;
 }
+@media (max-width: 480px) {
+  .commentdate {
+    display: block;
+  }
+  .commenttools {
+    display: inline-block;
+    float: none;
+    margin: 0;
+  }
+}
