--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
@@ -324,7 +324,6 @@
 
 .changes-info-box {
   .make-sm-column(6, @main-padding);
-  z-index: 100; /* Have text above the arrow in responsive mode */
 }
 
 .changes-info-box, #changes-info-comment {
@@ -333,4 +332,10 @@
 
 .changes-info-title {
   .h3;
+}
+
+@media (max-width: @screen-xs-max) {
+  #changes-info:before, #changes-info:after {
+    display: none; /* Hide the arrow for small resolutions */
+  }
 }
