--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
@@ -119,7 +119,7 @@
       "font-family-serif": "text",
       "font-family-monospace": "font",
       "font-size-base" : "size",
-      "btn-font-weight" : "text",
+      "btn-font-weight" : "size",
       "btn-default-color" : "color",
       "btn-default-bg" : "color",
       "btn-primary-color" : "color",
