XWIKI-11012: The Annotations icon is not listed on More actions if you choose to display it from Page Elements - Added icon for the Annotations action
(cherry picked from commit e21ac21dac2e9554603903284f58aacbb2308504)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/shortcuts.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/shortcuts.vm
@@ -18,7 +18,7 @@
       ## config document. This however should not happen.
       #set($annotationCount = $doc.getObjects('AnnotationCode.AnnotationClass').size())
     #end
-    #set ($discard = $docextralinks.add(['annotations', $services.localization.render('docextra.annotations'), $annotationCount]))
+    #set ($discard = $docextralinks.add(['annotations', $services.localization.render('docextra.annotations'), $annotationCount, 'pushpin']))
   #end
   #if($viewer != 'attachments' && $showattachments)
     #set ($discard = $docextralinks.add(['attachments', $services.localization.render('docextra.attachments'), $doc.getAttachmentList().size(), 'paperclip']))
