--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/layout.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/layout.less
@@ -247,6 +247,7 @@
   margin-bottom: @line-height-computed;
   #document-title h1 {
     margin-top: 0;
+    word-wrap: break-word;
   }
   .document-menu, .document-info {
     margin-top: @line-height-computed;
