--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/distribution.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/distribution.vm
@@ -1,3 +1,4 @@
+##!priviledged=true
 #macro(handleStepAction $action)
   ## Allow the current step to handle the action or to perform something before moving to the next step.
   #set ($discard = $services.distribution.renderCurrentStepToXHTML())
