XWIKI-11251: Handle #xwikicontent as a column in the layout grid
* Adding a ÕrowÕ container for #xwikicontent, that now is a column
* Indenting

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
@@ -52,12 +52,14 @@
   ## ----------------------------
   ## Display the rendered content
   ## ----------------------------
-  <div id="xwikicontent">
-    #if ("$!exception" != '')
-      #displayUnhandledException($exception)
-    #else
-      $renderedContent
-    #end
+  <div class="row">
+    <div id="xwikicontent" class="col-xs-12">
+      #if ("$!exception" != '')
+        #displayUnhandledException($exception)
+      #else
+        $renderedContent
+      #end
+    </div>
   </div>
 </div>
 ## -----------------------------------------------------------------------------------
