XWIKI-11251: Handle #xwikicontent as a column in the layout grid
* Adding a row container for #xwikicontent, that now is a column
* Indenting

(cherry picked from commit 1da37a417fcf9d52705f1b35468014cd93550b4a)

Conflicts:
	xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
@@ -50,8 +50,10 @@
   ## ----------------------------
   ## Display the rendered content
   ## ----------------------------
-  <div id="xwikicontent">
-  $renderedContent
+  <div class="row">
+    <div id="xwikicontent" class="col-xs-12">
+      $renderedContent
+    </div>
   </div>
 </div>
 ## -----------------------------------------------------------------------------------
