XWIKI-11258: Panels are displayed when we have a login error
(cherry picked from commit 997a5035cc79131e8b0d1a7ae69bb63a1f38719d)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/layoutvars.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/layoutvars.vm
@@ -127,7 +127,7 @@
   #set($showRightPanels = '0')
 #end
 
-#if($xcontext.action == 'login')
+#if (($xcontext.action == 'login') || ($xcontext.action == 'loginsubmit'))
   #set($showLeftPanels = '0')
   #set($showRightPanels = '0')
 #end
