XWIKI-11242: Adding '?skin=colibri' in the URL of a non-existing page results in a badly displayed view
- fix by fetching the skin via xwiki.getSkin() instead of xcontext.get('skin');
  the latter required programming rights

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/stylesheets.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/stylesheets.vm
@@ -7,8 +7,7 @@
 #set ($urlParametersMap = {})
 ## Specifying the skin to avoid some problems if the base skin is not the same as the current skin
 ## (see: http://jira.xwiki.org/browse/XWIKI-11190)
-## TODO: fix skin action to take into account the skin indicated in the URL
-#set ($discard = $urlParametersMap.put("skin", "$!xcontext.skin"))
+#set ($discard = $urlParametersMap.put("skin", "$!xwiki.skin"))
 #if ($themeDoc)
   #set ($discard = $urlParametersMap.put("colorTheme", "$!themeDocFullName"))
 #end
