XWIKI-11299: On subwikis (using Flamingo), 'Administer Wiki' links to the 'import' action.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_macros.vm
@@ -7,7 +7,7 @@
 #set ($isWikiUIAvailable = $xwiki.exists($WikiManagerMainDocReference))
 #set ($isWikiAPIAvailable = ("$!services.wiki" != '' && "$!services.wiki.user" != ''))
 #set ($isMainWikiUser = ($mainWikiId == "$!{xcontext.userReference.wikiReference.name}"))
-
+#set ($isAdminAppInstalled = $xwiki.exists($services.model.createDocumentReference('', 'XWiki', 'AdminSheet')))
 ###
 ###    Toplevel Menu
 ###
