XWIKI-11302: Cannot use, in a subwiki, a skin stored in the main wiki and a color theme stored in the subwiki.
(cherry picked from commit 3e83c7c24cac83e7f1f1d79b73b162480d90e8e9)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/stylesheets.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/stylesheets.vm
@@ -9,7 +9,7 @@
 ## (see: http://jira.xwiki.org/browse/XWIKI-11190)
 #set ($discard = $urlParametersMap.put("skin", "$!xwiki.skin"))
 #if ($themeDoc)
-  #set ($discard = $urlParametersMap.put("colorTheme", "$!themeDocFullName"))
+  #set ($discard = $urlParametersMap.put("colorTheme", $services.model.serialize($themeDoc.getDocumentReference(), "default")))
 #end
 #set ($urlParameters = $escapetool.xml($escapetool.url($urlParametersMap)))
 #set ($defaultStyleURL = $xwiki.getSkinFile($defaultstyle, true))
